# DayLight

./: .gitignore  ANDROID-BUILD.md  CALENDAR_INTEGRATION_REPORT.md  CLAUDE.md  GTK-HOVER-INVESTIGATION.md  Linux-Release.md  MIGRATION-REPORT-2026-03-01.md  PRD-Bases-Views.md  PRD.md  PRODUCT.md  SPRedux.md  SPredux-1-22-TODOs.md  Smoke-Human-DayLight.md  StackBuild.md  TAILWIND4-SVELTEKIT2-LESSONS.md  TASKBOARD-BlockedByTasks.md  TASKBOARD-Shortcodes.md  TASKBOARD.md  TASKS.md  ToDo.MD  ayu-skeleton.css  daylight-monogram-night.svg -->  debug.keystore  flake-add.md  flake.nix  flexoki-skeleton.css  generate-skeleton-themes.ts  gtk-dark.css  gtk.css  migrate-imported-tasknotes.ts  migrate-sp.ts  package.json  progress.jsonl  release-apk.sh  release.sh  result  spredux-signed.apk.idsig  status.yaml  svelte.config.js  themes-2-21.md  (+1 more)
.claude/: gtk-theme-investigation.md
Orchis-Orange-Light/gnome-shell/: gnome-shell.css
Orchis-Orange-Light/gtk-3.0/: gtk-dark.css  gtk.css
docs/: CLAUDE-TEMPLATE.md  Journey-1-25.md  NIX-BUILD.md
src/: app.css  app.d.ts  app.html
src-tauri/: Cargo.toml  result  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tasks.rs  theme.rs
static/: dev-fallback.html
test-data/: meta.json
themes/: Arc_Light.conf  Ayu_Light.conf  Ayu_Mirage.conf  Catppuccin_Latte.conf  Everforest_Dark_Hard.conf  Everforest_Light_Hard.conf  Flexoki Light.conf  Flexoki_Dark.conf  Flexoki_Light.conf  Modus_Operandi.conf  Tempus_Dawn.conf  Tomorrow.conf  kitty.conf  set-colors
(+1977 files in other folders)
