[package]
name = "spredux"
version = "0.1.0"
description = "Wayland-Ready Tasks + Calendar + Manual Time Logging"
authors = ["you"]
edition = "2021"

[lib]
name = "spredux_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["custom-protocol"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time"] }
tiny_http = "0.12"
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
dirs = "5"
